--- a/JimGroceryDude/Base.lproj/Main.storyboard
+++ b/JimGroceryDude/Base.lproj/Main.storyboard
@@ -149,19 +149,29 @@
         <!--Grocery Dude-->
         <scene sceneID="Pgb-v5-lSz">
             <objects>
-                <tableViewController id="OyF-9S-8vZ" sceneMemberID="viewController">
+                <tableViewController id="OyF-9S-8vZ" customClass="ShopTVC" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="cYD-v3-7rO">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Shop Cell" id="aM4-xj-sWf">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" accessoryType="detailDisclosureButton" indentationWidth="10" reuseIdentifier="Shop Cell" textLabel="jRM-gb-nF7" style="IBUITableViewCellStyleDefault" id="aM4-xj-sWf">
                                 <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aM4-xj-sWf" id="PcT-Xh-NiU">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="533" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jRM-gb-nF7">
+                                            <rect key="frame" x="15" y="0.0" width="518" height="43"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <animations/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                     <animations/>
                                 </tableViewCellContentView>
                                 <animations/>
@@ -172,7 +182,13 @@
                             <outlet property="delegate" destination="OyF-9S-8vZ" id="Crn-xr-dDF"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Grocery Dude" id="fJ0-PC-LPa"/>
+                    <navigationItem key="navigationItem" title="Grocery Dude" id="fJ0-PC-LPa">
+                        <barButtonItem key="leftBarButtonItem" title="Clear" id="uVd-AV-I8U">
+                            <connections>
+                                <action selector="clear:" destination="OyF-9S-8vZ" id="cvR-P5-vcV"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jNb-DT-5XO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
